--- a/src/app/pages/photo/photo.page.html
+++ b/src/app/pages/photo/photo.page.html
@@ -1,9 +1,27 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>photo</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content>   
 </ion-content>
+
+<ion-footer >
+  <ion-toolbar>
+    <ion-grid> 
+      <ion-row>  
+
+          <!-- footer left side content with the middle line -->
+          <ion-col col-6 class="mid-line col-height">
+              <ion-label  outline class="footer-label-left footer-common-adj">Cancel</ion-label>
+          </ion-col>
+         
+          <!-- footer right side content -->
+          <ion-col col-6 class="col-height">     
+              <ion-label class="footer-label-right footer-common-adj">Confirm</ion-label> 
+          </ion-col>
+   
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
