[IMP] login page UI works done.

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,29 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+<ion-content fullscreen>
+  <h1>Welcome Back!</h1>
+  <div class="center">
 
-<ion-content>
+    <!-- Username input -->
+    <div class="uname">
+      <ion-item>
+        <ion-input placeholder="User Name"></ion-input>
+      </ion-item>
+    </div>
 
+    <!-- Password input -->
+    <div class="password">
+      <ion-item>
+        <ion-input placeholder="Password"></ion-input>
+      </ion-item>
+    </div>
+  </div>
+  <!-- login button -->
+  <div class="login-btn">
+    <ion-button color="dark">Login</ion-button>
+  </div>
+
+  <!-- new user signup content -->
+  <div class="lower-content">
+    <span style="align-items: center;">New user? </span><span style="color: #FF4D85;">Signup</span>
+  </div>
 </ion-content>
