[IMP] Profile Page : Close Icon is resized and placed in the header of the page

--- a/src/app/pages/profile/tab2.page.html
+++ b/src/app/pages/profile/tab2.page.html
@@ -1,8 +1,11 @@
+<!-- Header -->
 <ion-header class="ion-no-border" [translucent]="true">
-  <ion-toolbar>
-      <ion-icon slot="end" src="assets/icon/closeIcon.svg"></ion-icon>
+  <ion-toolbar class="closeIconResize">
+    <!-- Close Icon -->
+      <ion-icon  slot="end" src="assets/icon/closeIcon.svg"></ion-icon>
     </ion-toolbar>
 </ion-header>
+<!-- Header Ends -->
 
 <ion-content [fullscreen]="true">
   <ion-grid>
