--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -1,9 +1,117 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>category</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
+
+<ion-content id="bg">
+
+  <!-- heading -->
+  <p class="headingStyle text-color">Pick your category!</p>
+
+  <!-- grid contains no of cards -->
+  <ion-grid>
+    <!-- row 1 -->
+    <ion-row>
+
+      <ion-col size="6" class = "left" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p>Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+      
+      <ion-col size="6" class="right" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p>Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+
+      <ion-col size="6" class="right" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p>Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+
+      <ion-col size="6" class="right" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p>Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+
+      <ion-col size="6" class="right" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p>Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+
+      <ion-col size="6" class="right" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p>Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+
+      <ion-col size="6" class="right" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p>Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+
+      <ion-col size="6" class="right" size-xl="2" size-lg="3" size-md="3" size-sm="4" size-xs="6" size="12">
+          <ion-card class="card-design">
+              <div class="image-adjustment">
+                <img src= "../../../assets/B2-images/Technology.svg">
+              </div>
+              <div class="cardTextStyle text-color">
+                <p class="cardTextStyle text-color">Finance</p>
+              </div>
+          </ion-card>
+      </ion-col>
+
+    </ion-row>
+   </ion-grid>
+  
 
 </ion-content>
+
+
+
+
+
+
+
+
+
+
+
+
