[FIX] MAIN: Global Theme color -  updated

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,12 +52,12 @@
   --ion-color-dark-shade: #1e2023;
   --ion-color-dark-tint: #383a3e;
 
-  --ion-color-medium: #979797;
-  --ion-color-medium-rgb: 151,151,151;
+  --ion-color-medium: #F0F0F0;
+  --ion-color-medium-rgb: 240,240,240;
   --ion-color-medium-contrast: #000000;
   --ion-color-medium-contrast-rgb: 0,0,0;
-  --ion-color-medium-shade: #858585;
-  --ion-color-medium-tint: #a1a1a1;
+  --ion-color-medium-shade: #d3d3d3;
+  --ion-color-medium-tint: #f2f2f2;
 
   --ion-color-light: #FEFEFE;
   --ion-color-light-rgb: 254,254,254;
