[IMP] CategoryModule : Button Has been added.
Description :
	ion-button code is added in category.html and category.scss.

--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -99,8 +99,17 @@
       </ion-col>
 
     </ion-row>
-   </ion-grid>
   
+
+   <!-- Button -->
+    <ion-row id="Button-RowPadding">
+        <ion-col class="alignCenter">
+            <ion-button color=dark>Next</ion-button>
+        </ion-col>
+    </ion-row>
+
+  </ion-grid>
+
 
 </ion-content>
 
