--- a/src/app/pages/post/post.page.html
+++ b/src/app/pages/post/post.page.html
@@ -15,15 +15,36 @@
       <ion-row>
         <ion-col col-12>
           <ion-item class="select-item">
-          <ion-label class="label-category">Category</ion-label>
-          <ion-select  class="select-category" okText="Okay" cancelText="Dismiss">
-            <ion-select-option value="brown">Brown</ion-select-option>
-            <ion-select-option value="blonde">Blonde</ion-select-option>
-            <ion-select-option value="black">Black</ion-select-option>
-            <ion-select-option value="red">Red</ion-select-option>
-          </ion-select>
-        </ion-item>
+            <ion-label class="label-category">Category</ion-label>
+            <ion-select  class="select-category" okText="Okay" cancelText="Dismiss">
+              <ion-select-option value="Entertainment">Entertainment</ion-select-option>
+              <ion-select-option value="Science">Science</ion-select-option>
+              <ion-select-option value="Technology">Technology</ion-select-option>
+              <ion-select-option value="Sports">Sports</ion-select-option>
+              <ion-select-option value="Politics">Politics</ion-select-option>
+              <ion-select-option value="Finance">Finance</ion-select-option>
+              <ion-select-option value="Education">Education</ion-select-option>
+              <ion-select-option value="Agriculture">Agriculture</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      
+      <ion-row>
+        <ion-col col-12>
+          <ion-label class="label-comments">Express your thoughts...</ion-label>         
         </ion-col>
       </ion-row>
     </ion-grid>
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <ion-button class="button-photo" slot="start" fill="clear">
+      <ion-icon class="footer-icon" slot="icon-only" src="assets/icon/post-photo.svg"></ion-icon>
+    </ion-button>
+    <ion-button class="button-Go" slot="end" fill="clear">
+      <ion-icon class="footer-icon" slot="icon-only" src="assets/icon/Go.svg"></ion-icon>
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
