[IMP] photopage : A sample photo is ket in the photopage
A sample photo is kept at the center inside the photo page. The photo page is completed and checked for responsiveness.

--- a/src/app/pages/photo/photo.page.html
+++ b/src/app/pages/photo/photo.page.html
@@ -1,9 +1,11 @@
-<ion-header class="ion-no-border">
+<ion-header class="header ion-no-border">
   <ion-toolbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>   
+<ion-content>
+  <!-- image to be inserted -->
+  <img class="top-img" src="../../assets/icon/articlepic.jpg">   
 </ion-content>
 
 <ion-footer >
