--- a/src/app/pages/photo/photo.page.scss
+++ b/src/app/pages/photo/photo.page.scss
@@ -1,4 +1,25 @@
 /*=======================================
+           header height
+========================================*/
+
+.header{
+    height:0px;
+}
+
+/*=======================================
+            Content image
+========================================*/
+
+.top-img{
+    position:absolute;
+    left: 0;
+    right: 0;
+    margin:0 auto;
+    top:50%;
+    transform:translateY(-50%);
+}
+
+/*=======================================
                  Footer
 ========================================*/
 
