--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -5,8 +5,12 @@
   <!-- heading -->
   <p class="headingStyle text-color">Pick your category!</p>
 
+
+
   <!-- grid contains no of cards -->
   <ion-grid>
+
+
     <!-- row 1 -->
     <ion-row>
 
@@ -119,14 +123,13 @@
   
     <!--  Row 2 -->
     <ion-row id="button-to-bring-bottom">
-
       <!-- col-1 for button -->
-        <ion-col class="button-alignCenter">
+        <ion-col class="button-alignCenter" >
             <!-- Next Button -->
-            <ion-button color = dark>Next</ion-button>
+            <ion-button color = dark (click)= "openModal()">Next</ion-button>
         </ion-col>
-
     </ion-row>
+
 
   </ion-grid>
 
