--- a/src/app/pages/photo/photo.page.scss
+++ b/src/app/pages/photo/photo.page.scss
@@ -3,7 +3,7 @@
 ========================================*/
 
 .header{
-    height:0px;
+            height:0px;
 }
 
 /*=======================================
@@ -11,12 +11,16 @@
 ========================================*/
 
 .top-img{
-    position:absolute;
-    left: 0;
-    right: 0;
-    margin:0 auto;
-    top:50%;
-    transform:translateY(-50%);
+            position:absolute;
+            left: 0;
+            right: 0;
+            margin:0 auto;
+            top:50%;
+            transform:translateY(-50%);
+            -webkit-transform:translateY(-50%);
+            -moz-transform:translateY(-50%);
+            -ms-transform:translateY(-50%);
+            -o-transform:translateY(-50%);
 }
 
 /*=======================================
