--- a/src/app/pages/post/post.page.scss
+++ b/src/app/pages/post/post.page.scss
@@ -3,7 +3,7 @@
 ========================================*/
 
 ion-toolbar{
-    .button{
+    .into-button{
             margin-top:32px;
             margin-right:24px;
     }
@@ -53,6 +53,10 @@ ion-icon{
             Category selection
 ========================================*/
 
+ion-select {
+            min-width: 100%;
+            padding-left: 0;
+}
 .select-item{
             position: absolute;
             height: 40px;
@@ -68,47 +72,43 @@ ion-icon{
             -ms-border-radius: 5px;
             -o-border-radius: 5px;
 }
-.label-category{
-            margin-top:-6px;
-            font-family: Quicksand;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 17px;
-            line-height: 19px;    
-            color: var(--ion-color-warning);
-}
 .select-category{
             margin-top:-8px;
+            font-family: Quicksand;
+            font-size:18px;
 }
-
 ion-select::part(icon) {
             color: var(--ion-color-primary);
+            opacity: 1;     
+}
+ion-select::part(placeholder) {
+            color:var(--ion-color-warning); 
             opacity: 1;
 }
-
 
 /*=======================================
             Comment section
 ========================================*/
 
-.label-comments{
+.comments-item{
             position: absolute;
             height: 450px;
             left: 38px;
             right:38px;
             top: 137px;
-            color:var(--ion-color-warning);
+            //color:var(--ion-color-warning);
             background: var(--ion-color-white);
             border: 0.5px solid var(--ion-color-tertiary);
             box-sizing: border-box;
-            border-radius: 5px;
+            border-radius: 5px;       
+}
+ion-textarea{     
             font-family: Quicksand;
-            padding-top:5px;
-            padding-left:16px;
+            margin-top:-6px;
             font-style: normal;
             font-weight: normal;
             font-size: 20px;
-            line-height: 24px;
+            line-height: 24px; 
 }
 
 /*=======================================
@@ -116,11 +116,12 @@ ion-select::part(icon) {
 ========================================*/
 
 ion-footer{
-    height : 90px !important;
-    .button-photo{
-            padding-left:25px;
-    }
-    .button-Go{
-        padding-right:6px;
-    }
+           height : 90px !important;
+
+           .footer-button-photo{
+                   padding-left:25px;
+           }
+           .footer-button-Go{
+                   padding-right:25px;
+           }
 }
