[IMP] FeedPageModule : feed not found page completed and changes done in feedCommentPage.

--- a/src/app/modals/feed-comments/feed-comments.page.html
+++ b/src/app/modals/feed-comments/feed-comments.page.html
@@ -93,16 +93,16 @@
         <ion-row>
 
             <!-- col-01 for avatar -->
-            <ion-col size="2">
+            <ion-col size="1">
                 <!-- avatar -->
-                  <ion-avatar>
+                  <ion-avatar id="avatar">
                     <img src="../../../assets/icon/userProfile-icon.svg">
                   </ion-avatar>
                 <!-- </div> -->
             </ion-col>
 
             <!-- col-02 for input -->
-            <ion-col size="8">
+            <ion-col size="9">
                 <ion-input></ion-input>
             </ion-col>
 
