--- a/src/app/modals/feed-comments/feed-comments.page.scss
+++ b/src/app/modals/feed-comments/feed-comments.page.scss
@@ -75,8 +75,11 @@ ion-footer{
 #send-icon{
     display: flex;
     justify-content: flex-end !important;
-    margin-top: 5px;
-    zoom : 1.4 !important;
+    margin-top: 4px;
+    zoom : 1.7 !important;
+}
+#avatar{
+    margin-top: 4px;
 }
 
 
