[IMP] POST: Category popup heading text centered

--- a/src/global.scss
+++ b/src/global.scss
@@ -33,20 +33,28 @@ ion-footer {
 
 // Select category of post page
 
-.my-alert .alert-wrapper { 
-    font-family:Quicksand;
-    border-radius:20px;
-    -webkit-border-radius:20px;
-    -moz-border-radius:20px;
-    -ms-border-radius:20px;
-    -o-border-radius:20px;
+.my-alert .alert-wrapper {
+  font-family: Quicksand;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 
   .alert-button-group {
     justify-content: center;
     font-weight: bold;
-    font-size:20px;
+    font-size: 20px;
   }
   .alert-button:nth-child(1) {
     display: none;
-}
+  }
+
+  // align the heading text center
+  .alert-head {
+    text-align: center !important;
+    h2#alert-3-hdr {
+      display: inline !important;
+    }
+  }
 }
