[IMP] feedCommentModule : changes done in footter.

--- a/src/app/modals/feed-comments/feed-comments.page.html
+++ b/src/app/modals/feed-comments/feed-comments.page.html
@@ -93,7 +93,7 @@
         <ion-row>
 
             <!-- col-01 for avatar -->
-            <ion-col size="1">
+            <ion-col size="1.2">
                 <!-- avatar -->
                   <ion-avatar id="avatar">
                     <img src="../../../assets/icon/userProfile-icon.svg">
@@ -102,8 +102,8 @@
             </ion-col>
 
             <!-- col-02 for input -->
-            <ion-col size="9">
-                <ion-input></ion-input>
+            <ion-col size="8.8">
+                <ion-input placeholder="leave your thoughts"></ion-input>
             </ion-col>
 
             <!-- col-02 for cancel-icon -->
