[IMP]photopage,postpage : Changes completed
Photopage : The two label in the footer are changed to button for the perfect click effect.
Postpage : The margin-top of the comment section is aligned as per the UI design

--- a/src/app/pages/photo/photo.page.html
+++ b/src/app/pages/photo/photo.page.html
@@ -15,12 +15,12 @@
 
           <!-- footer left side content with the middle line -->
           <ion-col col-6 class="mid-line col-height">
-              <ion-label  outline class="footer-label-left footer-common-adj">Cancel</ion-label>
+            <ion-button color="danger" class="footer-common-adj" fill="clear">Cancel</ion-button>
           </ion-col>
          
           <!-- footer right side content -->
-          <ion-col col-6 class="col-height">     
-              <ion-label class="footer-label-right footer-common-adj">Confirm</ion-label> 
+          <ion-col col-6 class="col-height">
+              <ion-button color="success" class="footer-common-adj" fill="clear">Confirm</ion-button>    
           </ion-col>
    
       </ion-row>
