--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,9 +1,41 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>signup</ion-title>
-  </ion-toolbar>
-</ion-header>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+<ion-content fullscreen>
+  <h1>Create Account</h1>
+  <div class="center">
 
-<ion-content>
+    <!-- Username input -->
+    <div class="uname">
+      <ion-item>
+        <ion-input placeholder="User Name"></ion-input>
+      </ion-item>
+    </div>
 
+    <!-- Password input -->
+    <div class="email">
+      <ion-item>
+        <ion-input placeholder="Email ID"></ion-input>
+      </ion-item>
+    </div>
+
+    <div class="password">
+      <ion-item>
+        <ion-input placeholder="Password"></ion-input>
+      </ion-item>
+    </div>
+
+    <div class="password">
+      <ion-item>
+        <ion-input placeholder="Confirm Password"></ion-input>
+      </ion-item>
+    </div>
+  </div>
+  <!-- login button -->
+  <div class="login-btn">
+    <ion-button color="dark">Signup</ion-button>
+  </div>
+
+  <!-- new user signup content -->
+  <div class="lower-content">
+    <h6>Already a user ?<span style="color: var(--ion-color-primary);"> Login</span></h6>
+  </div>
 </ion-content>
