--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -8,9 +8,10 @@ h6{
     text-align: center;
     display: flex;
     flex-direction: column;
+    display: inline;
 }
 
-.uname {
+.email {
     margin-top: 60%;
     width: 80%;
     vertical-align: middle;
@@ -40,11 +41,12 @@ h6{
     color: whitesmoke;
     font-weight: 550 !important;
     font-size: 26px;
+    width: auto;
 }
 
 .lower-content {
     position: absolute;
-    bottom: 5px;
+    bottom: 20px;
     left: 0px;
     right: 0px;
     display: block;
