[IMP] TabsModule : Footer added for FeedPage.
Description :
	~ Tabs alignment changed in tabsPage
	~ FabIcon for Plus button has bee added.

--- a/src/app/pages/home/tab1.page.html
+++ b/src/app/pages/home/tab1.page.html
@@ -30,7 +30,7 @@
 
 
 
-  <!-- CONTENT STARTS -->
+  <!-- CONTENT-01 STARTS -->
   <ion-grid id="grid-not-found">
     <!-- row-01 image -->
     <ion-row>
@@ -51,5 +51,12 @@
     </ion-row>
   
   </ion-grid>
+  <!-- CONTENT-01 ENDS -->
+
+
+  <!-- CONTENT-02 STARTS -->
+
+  <!-- CONTENT-02 ENDS -->
+
 
 </ion-content>
