--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,15 +1,45 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
-    </ion-tab-button>
+      <!--  grid for responsiveness -->
+      <ion-grid class="footerGrid">
+          <ion-row>
+            <ion-col>
+                <!-- tab-button-01 - homeButton -->
+                <ion-tab-button tab="tab1" id="home">
+                    <div id="home-icon">
+                      <ion-icon src="../../../assets/icon/home.svg"></ion-icon>
+                    </div>
+                  </ion-tab-button>
+            </ion-col>
+            
+            <ion-col>
+                <!-- tab-button-02 - profileButton -->
+                <ion-tab-button tab="tab2" id="profile">
+                    <div id="profile-icon">
+                      <ion-icon src="../../../assets/icon/profile-icon.svg"></ion-icon>
+                    </div>
+                  </ion-tab-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+    
   </ion-tab-bar>
 
+  <!-- Add Icon -->
+  <div class="fab-container">
+    <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+        <ion-fab-button>
+            <ion-icon src="../../../assets/icon/plus.svg" id="addIcon"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+  </div>
+
 </ion-tabs>
+
+
+
+
+
+
+  
