--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -1,1 +1,29 @@
+/*=========================================================
+                        Tabs
+==========================================================*/
+#home-icon{
+    text-align: center;
+    zoom: 1.7;
+}
+#profile-icon{
+    text-align: center;
+    zoom: 1.9;
+}
 
+/*=========================================================
+                        Add Icon
+==========================================================*/
+
+/* Add Icon */
+#addIcon{
+    font-size: 20px !important;
+}
+ion-fab{
+    bottom: 30px;
+    zoom: -100px ;
+}
+ion-fab-button{
+    width: 45px !important;
+    height: 45px !important;
+    margin: 5px;
+}
