[IMP] Profile Page : Rename popup remove

--- a/src/app/pages/profile/tab2.page.html
+++ b/src/app/pages/profile/tab2.page.html
@@ -33,7 +33,7 @@
               <ion-label class="noPaddingMarign">Poorvasha Murugavel</ion-label>
             </ion-col>
             <!-- Edit Icon -->
-            <ion-col size="1" id="editIcon" (click)="rename()">
+            <ion-col size="1" id="editIcon">
               <ion-icon src="assets/icon/editIcon.svg"></ion-icon>
             </ion-col>
           </ion-row>
