[IMP] Profile Page : Category Button fixed

--- a/src/app/pages/profile/tab2.page.html
+++ b/src/app/pages/profile/tab2.page.html
@@ -41,14 +41,14 @@
     </ion-row>
 
     <!-- Category Button -->
-    <ion-row>
+    <ion-row class="topSpacing">
       <ion-col class="alignCenter">
-        <ion-button shape="round" text-capitalize color="dark"> Rename </ion-button>
+        <ion-button shape="round" color="dark" class="noPaddingMarign" id="categoryButton">Category<span>5</span> </ion-button>
       </ion-col>
     </ion-row>
 
     <!-- Post -->
-    <ion-row>
+    <ion-row >
       <ion-label>Post</ion-label>
 
       <ion-card>
