--- a/src/app/pages/profile/tab2.page.scss
+++ b/src/app/pages/profile/tab2.page.scss
@@ -73,3 +73,24 @@ ion-content{
     padding: 0;
     margin: 0;
 }
+
+/*Category Button*/ 
+.alignCenter{
+    display: flex;
+    justify-content: center;
+}
+#categoryButton span{
+    padding-left: 10px;
+}
+.topSpacing{
+    padding-top: 14px;
+}
+
+#categoryButton {
+    width: 120px;
+    text-transform: none;
+    font-family: 'Quicksand' sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    --box-shadow:none;
+}
